Alignment fixes

--- a/application/views/global.css
+++ b/application/views/global.css
@@ -3249,6 +3249,7 @@ font-weight: bold !important;
 
 .cover-link.coinType12274{
     border-radius: 50%;
+    top: 44%;
 }
 
 
